--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
+.grocerylist{
+  width: 96%;
+  margin: auto;
+  height: 580px;
+  display: flex;
+  padding: 10px;
+  column-gap: 3%;
+}
+
+#input{
+  width: 30%;
+  height: 200px;
+  border: 1px solid blue;
+  text-align: center;
+  border-radius: 10px;
+}
+
+#list{
+  width: 67%;
+  height: 100%;
+}
+
+h1{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input{
+  font-size: 17px;
+  padding: 5px;
+  margin: auto;
+  width: 80%;
+}
+#addButton{
+  font-size: 20px;
+  padding: 7px;
+  margin: auto;
+  width: 83%;
+  margin-top: 10px;
+  background-color: green;
+  font-weight: bold;
+  color: aliceblue;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#addButton:hover{
+  background-color: rgba(235, 208, 55, 0.783);
+  color: black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+table{
+  font-size: 18px;
+  width: 100%;
+  border-collapse: collapse;
+  text-align: center;
+}
+
+thead{
+  background-color: rgba(235, 208, 55, 0.783);
+  color: black;
+  font-size: 22px;
+}
+
+td,tr,th{
+  border:  1px solid black;
+  text-align: center;
+}
+
+#title{
+  text-align: left;
+ padding-left: 20px
+}
+
+#delButton{
+  background-color: red;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding: 5px;
+  width: 80%;
+  border: none;
+  cursor: pointer;
+  margin: 5px;
+  border-radius: 10px;
 }
